# ansible-collection-rke

./: .gitignore  .talismanrc  .yamllint  Makefile  README.md  devbox.json  galaxy.yml  pyproject.toml  requirements.yml  roles.yml
.github/workflows/: build.yml  install.yml  k8s.yml  molecule.yml  release.yml  upgrade.yml  version.yml  versions.yml
molecule/api/: molecule.yml
molecule/common/: cleanup.yml  create.yml  destroy.yml  guests.yml  harbor.yml  install.yml  k8s.yml  networking.yml  prepare.yml  registry.yml  update.yml  vars.yml  verify.yml
molecule/common/templates/: user-data.yml.j2  vm.j2.xml  vm.xml.j2
molecule/harbor/: molecule.yml
molecule/install/: molecule.yml  verify.yml
molecule/k8s/: molecule.yml
molecule/registry/: converge.yml  molecule.yml
molecule/update/: molecule.yml
molecule/versions/: molecule.yml
playbooks/: consul.yml  docker.yml  harbor.yml  helm.yml  install.yml  k8s.yml  kubeconfig.yml  prepare.yml  proxy.yml  registry.yml  rke.yml  ssh.yml  update.yml
playbooks/templates/: cluster.j2.yml
playbooks/vars/: main.yml
