[tool.poetry]
name = "nephelaiio-rke"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
xmltodict = "^0.13.0"
github3-py = "^4.0.1"
urllib3 = "<2.0"
kubernetes = "^28.1.0"

[tool.poetry.group.dev.dependencies]
netaddr = "^0.9.0"
yamllint = "^1.32.0"
ansible = "^8.5.0"
molecule-docker = "^2.1.0"
molecule = "^6.0.2"
ansible-lint = { version = "^6.20.3", markers = "platform_system != 'Windows'" }
libvirt-python = "^9.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
