[tool.poetry]
name = "nephelaiio-rke"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2.3", markers = "platform_system != 'Windows'" }
ansible = "^9.5.1"
molecule = "^24.2.1"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
netaddr = "^1.2.1"
yamllint = "^1.35.1"
libvirt-python = "^10.3.0"
lxml = "^5.2.1"
kubernetes = "^29.0.0"
xmltodict = "^0.13.0"
github3-py = "^4.0.1"
urllib3 = "^2.2.1"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
